# j105-logger

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASES.md  package.json  playwright.config.ts  pyproject.toml  walkthrough.md
.claude/skills/architecture/: SKILL.md
.claude/skills/data-license/: SKILL.md
.claude/skills/deploy-pi/: SKILL.md
.claude/skills/diagnose/: SKILL.md
.claude/skills/domain/: SKILL.md
.claude/skills/ideate/: SKILL.md
.claude/skills/integration-test/: SKILL.md
.claude/skills/new-migration/: SKILL.md
.claude/skills/new-module/: SKILL.md
.claude/skills/pr-checklist/: SKILL.md
.claude/skills/release-notes/: SKILL.md
.claude/skills/skill-compare/: SKILL.md
.claude/skills/skill-eval/: SKILL.md
.claude/skills/spec/: SKILL.md
.claude/skills/tdd/: SKILL.md
.claude/skills/trigger-tests/: METHODOLOGY.md  cases.yaml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  claude-bisect.yml  claude-code-review.yml  claude-nightly-review.yml  integration.yml  playwright.yml  promote.yml
data/: calibration-report-2026-04-14.md
docker/: .dockerignore  Dockerfile  build.sh  stitch-360.sh
docker/claude-dev/: Dockerfile  entrypoint.sh  run-issue.sh  run-pr.sh
docs/: agent-context-decisions.md  ais-fleet-tracking-issue.md  audio-setup.md  backup.md  bootstrap-new-pi.md  camera-setup.md  co-op-charter-template.md  community-brief.md  corvo-hotspot-network-setup.md  crew-race-day.md  data-licensing.md  database-schema.md  esp32cam-setup.md  features.md  federation-design.md  fleet-quickstart.md  grafana-annotations.md  grafana-race-track.md  grafana-video-links.md  guide-champions.md  guide-coaches.md  guide-federation.md  guide-sailors.md  helmlog.1  https-deployment.md  ideation-log.md  incident-ssh-lockout-2026-03-01.md  operators-guide.md  pentest-sow-2026-03-01.md  pgn-notes.md  risk-tiers.md  roadmap.md  security-audit-2026-03-01.md  testing-guide.md  transcription-offload.md  video-pipeline.md
docs/archive/: incident-ssh-lockout-2026-03-01.md  pentest-sow-2026-03-01.md  security-audit-2026-03-01.md  speed-calibration-2026-04-18.md  speed-calibration-stage2-procedure.md
docs/specs/: semantic-layer.md
launchd/: com.helmlog.sd-import.plist  com.helmlog.sd-import.plist.template  com.helmlog.video-watch.plist  com.helmlog.video-watch.plist.template
scripts/: backup.sh  backup_report_mail.py  bootstrap.sh  build_golden_fixture.py  com.helmlog.backup.plist  com.helmlog.video.plist  com.j105.backup.plist  com.j105.video.plist  configure.sh  deploy.sh  harness_seed.py  import-matched.sh  integration_smoke.py  link_channel_videos.py  pi_harness.py  process-videos.sh  provision-grafana.sh  reset-pi.sh  restore.sh  setup-backup-mac.sh  setup-backup-user.sh  setup-video-mac.sh  setup.sh  transcribe_worker.py  upload-stitched.sh  validate_snapshot.py  watch-exports.sh  wind_field_harness.py
scripts/grafana/: dashboards.yaml  datasources.yaml  network-bandwidth.json  pi-health.json  sailing-data.json  service-logs.json
scripts/loki/: loki-config.yaml  promtail-config.yaml
scripts/nginx/: helmlog.conf  j105-logger.conf
src/helmlog/: anchor_match.py  anchors.py  aruco_detector.py  assistant.py  audio.py  auth.py  bandwidth.py  boat_settings.py  briefings.py  cache.py  cameras.py  courses.py  current.py  deploy.py  email.py  export.py  external.py  federation.py  insta360.py  llm_callback_job.py  llm_client.py  llm_policy.py  llm_transcript.py  main.py  maneuver_detector.py  monitor.py  network.py  nmea2000.py  notifications.py  oauth.py  peer_api.py  peer_auth.py  peer_client.py  pipeline.py  polar.py  puget_sound_land.json  race_start.py  races.py  semantic_layer.py  sensors.py  (+16 more)
src/helmlog/analysis/: __init__.py  cache.py  catalog.py  maneuvers.py  protocol.py
src/helmlog/results/: __init__.py  base.py  clubspot.py  importer.py  session_match.py  styc.py
src/helmlog/routes/: __init__.py  _helpers.py  admin.py  analysis.py  aruco.py  assistant.py  audio.py  audio_channels.py  auth.py  boat_settings.py  bookmarks.py  briefings.py  cameras.py  comments.py  controls.py  crew.py  deployment.py  device_cameras.py  devices.py  federation.py  instruments.py  llm.py  me.py  moments.py  network.py  notes.py  notifications.py  pages.py  polar.py  race_start.py  race_start_sim.py  races.py  results.py  sails.py  sensors.py  sessions.py  settings.py  tags.py  videos.py  visualizations.py  (+1 more)
src/helmlog/static/: anchor-picker.js  base.css  compare.js  history.js  home.js  llm.js  maneuver_viz.js  maneuvers.js  overlay.js  race_start.js  session.js  (+5 more)
src/logger/: __init__.py  audio.py  auth.py  cameras.py  can_reader.py  email.py  export.py  external.py  influx.py  insta360.py  main.py  monitor.py  nmea2000.py  pipeline.py  polar.py  races.py  sk_reader.py  storage.py  transcribe.py  triggers.py  video.py  web.py  youtube.py
tests/: conftest.py  test_analysis_catalog.py  test_analysis_maneuvers.py  test_anchor_match.py  test_anchors.py  test_aruco_detector.py  test_aruco_storage.py  test_aruco_web.py  test_assistant.py  test_audio.py  test_audio_channels_admin.py  test_audio_streaming_threshold.py  test_auth.py  test_bookmark_counterparty.py  test_bookmarks_api.py  test_briefings_chart.py  test_briefings_compose.py  test_briefings_orchestrator.py  test_briefings_race_type.py  test_briefings_scheduler.py  test_briefings_storage.py  test_briefings_venue.py  test_briefings_web.py  test_cameras.py  test_capture_groups.py  test_change_password.py  test_channel_deletion.py  test_courses.py  test_current.py  test_debrief_parity.py  test_deploy.py  test_device_auth.py  test_device_cameras.py  test_diarize_crew.py  test_export.py  test_export_wav.py  test_external.py  test_external_cache.py  test_federation.py  test_federation_storage.py  (+103 more)
tests/e2e/: serve.py  smoke.spec.ts
tests/integration/: Dockerfile  conftest.py  docker-compose.yml  seed.py  serve.py  test_auth_e2e.py  test_data_license_e2e.py  test_embargo_e2e.py  test_federation_e2e.py  test_session_matching_e2e.py
(+82 files in other folders)
