[project]
name = "j105-logger"
version = "0.1.0"
description = "NMEA 2000 data logger for J105 sailboat racing performance analysis"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # CAN bus
    "python-can>=4.4.2",
    # HTTP client (for external data sources)
    "httpx>=0.27.0",
    # YouTube stream metadata
    "yt-dlp>=2024.11.4",
    # Logging
    "loguru>=0.7.2",
    # Environment / config
    "python-dotenv>=1.0.1",
    "aiosqlite>=0.22.1",
    # Signal K WebSocket client
    "websockets>=14.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "fastapi>=0.133.1",
    "uvicorn>=0.41.0",
    "python-multipart>=0.0.22",
    "influxdb-client>=1.44.0",
    "psutil>=7.2.2",
    "faster-whisper>=1.2.1",
    # Speaker diarisation (optional at runtime — only runs when HF_TOKEN is set)
    "pyannote-audio>=1.1",
]

[project.scripts]
j105-logger = "logger.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/logger"]

# ---------------------------------------------------------------------------
# uv — resolver overrides
# ---------------------------------------------------------------------------
[tool.uv]
# torchcodec (pulled in by speechbrain) has no aarch64 wheels.
# speechbrain doesn't need it at runtime for diarisation — it's only used
# for optional audio decoding that we handle via soundfile instead.
override-dependencies = [
    "torchcodec>=0.1; platform_machine != 'aarch64'",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.11.0",
    "ruff>=0.7.0",
    "pytest-env>=1.5.0",
]

# ---------------------------------------------------------------------------
# Ruff — linting + formatting
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations (enforce type hints)
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/logger/web.py" = ["E501"]  # HTML strings contain long lines that can't be wrapped

[tool.ruff.lint.isort]
known-first-party = ["logger"]

# ---------------------------------------------------------------------------
# Mypy — type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["sounddevice", "soundfile"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pyannote.*", "torch", "torchaudio"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/logger --cov-report=term-missing"
env = [
    "AUTH_DISABLED=true",
]

[tool.coverage.run]
source = ["src/logger"]
omit = ["tests/*"]
